cluster/apps/monitoring/kube-prometheus-stack/networkpolicies/egress-kube-prometheus-stack-admission-create-job.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: egress-kube-prometheus-stack-admission-create-job
  namespace: monitoring
spec:
  endpointSelector:
    matchLabels:
      app: kube-prometheus-stack-admission-create
      app.kubernetes.io/name: kube-prometheus-stack-admission-create
  egress:
    - toEntities:
        - host
      toPorts:
        - ports:
            - port: "6443" # kube api
              protocol: TCP
